# char-01

./: .gitignore  README.md  requirements.txt
char_01/install/: local_setup.sh  setup.bash  setup.sh
char_01/install/ros2_pkg/lib/ros2_pkg/: action_client  action_server  publisher  rpm_pub  service_client  service_server  speed_calc  subscriber  turn_camera_client  turn_camera_service
char_01/install/ros2_pkg/share/ros2_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
char_01/log/: latest_build
char_01/ros2_pkg/: CMakeLists.txt  package.xml
char_01/ros2_pkg/launch/: rpm_node.launch.py
char_01/ros2_pkg/models/char_01/: char_01_model.sdf
char_01/ros2_pkg/models/ground_plane/: my_ground_plane.sdf
char_01/ros2_pkg/models/wheeled_model/: model.config
char_01/ros2_pkg/sensors/: lidar_node.cc  sensor_launch.ign
char_01/ros2_pkg/src/: action_server.cpp  publisher.cpp  rpm_pub.cpp
char_01/ros2_pkg/srv/: TurnCamera.srv
char_01/ros2_pkg/worlds/: char_01_world.sdf  world_demo.sdf
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros2_pkg/lib/ros2_pkg/: action_client  action_server  control  lidar_node  predict.py  publisher  rpm_pub  service_client  service_server  speed_calc  subscriber  turn_camera_client  turn_camera_service
install/ros2_pkg/share/ros2_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros2_pkg/share/ros2_pkg/action/: Navigate.action  Navigate.idl
install/ros2_pkg/share/ros2_pkg/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_ros2_pkg__rosidl_typesupport_fastrtps_cExport.cmake  ros2_pkgConfig-version.cmake  ros2_pkgConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/ros2_pkg/share/ros2_pkg/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/ros2_pkg/share/ros2_pkg/launch/: char_01.launch.py  launch_project.launch.py  rpm_node.launch.py  train_simulation.launch.py
install/ros2_pkg/share/ros2_pkg/srv/: OddEvenCheck.idl  OddEvenCheck.srv  OddEvenCheck_Request.msg  OddEvenCheck_Response.msg  TurnCamera.idl  TurnCamera.srv  TurnCamera_Request.msg  TurnCamera_Response.msg
log/: latest_build
ros2_pkg/: CMakeLists.txt  package.xml  setup.py
ros2_pkg/data/: lidar_data.txt
ros2_pkg/data/k_best/: k_best.pkl
ros2_pkg/data/label_encoder/: label_encoder.pkl
ros2_pkg/data/rf_model/: random_forest_model.pkl
ros2_pkg/install/: local_setup.sh  setup.sh
ros2_pkg/install/ros2_pkg/lib/ros2_pkg/: action_client  action_server  lidar_node  service_client  service_server  speed_calc  turn_camera_client  turn_camera_service
ros2_pkg/launch/: char_01.launch.py  launch_project.launch.py  rpm_node.launch.py
ros2_pkg/log/: latest_build
ros2_pkg/models/char_01/: README.md  char_01_model.sdf  model.config
ros2_pkg/models/ground_plane/: model.config
ros2_pkg/models/wheeled_model/: model.sdf
ros2_pkg/scripts/: predict.py  train_model.py  visualize.py
ros2_pkg/sensors/: CMakeLists.txt  lidar_node.cc
ros2_pkg/sensors/install/: local_setup.sh  setup.sh
ros2_pkg/sensors/log/: latest_build
ros2_pkg/src/: action_client.cpp  control.cpp  service_client.cpp  service_server.cpp  speed_calc.cpp  subscriber.cpp  turn_camera_client.cpp  turn_camera_service.cpp
ros2_pkg/worlds/: char_01_world.sdf  old.sdf  simulation_project_world.sdf  test_world.sdf  wheeled_model_world.sdf
ros2_pkg/worlds/install/: local_setup.sh  setup.sh
ros2_pkg/worlds/log/: latest_build
(+160 files in other folders)
